<resources>
    <string name="app_name">BeerBrewer</string>

    <!-- items   -->
    <string name="amount">Amount </string>
    <string name="unit">Unit: </string>
    <string name="value">Value: </string>
    <string name="name">Name: </string>

    <string name="hops_add">Add: </string>
    <string name="hops_attribute">Attribute: </string>
    <string name="hop">HOP</string>
    <string name="malt">Malt</string>
    <string name="yeast">Yeast</string>

</resources>